1、COPY修改 2、增加检索功能